syntax = "proto3";
import "google/protobuf/empty.proto";

package pl.chacz.log;

option java_multiple_files = true;

service Log {
    rpc PlanetCreate (Message) returns (google.protobuf.Empty);
    rpc PlanetDestroy (Message) returns (google.protobuf.Empty);
    rpc PlanetTarget (Message) returns (google.protobuf.Empty);
}

message Message {
    string message = 1;
}